--- a/views/customer/details.ejs
+++ b/views/customer/details.ejs
@@ -40,9 +40,18 @@
             </tr>
           </table>
         </form>
+        
       </figcaption>
     </figure>
+    <form>
+          <table>
+            <h2 class="text-center">PRODUCT DETAILS</h2>
+          </table>
+        </form>
   </div>
+  <form>
+    
+  </form>
   <%- include('./_footer.ejs') %>
 </body>
 
