--- a/views/admin/_menu.ejs
+++ b/views/admin/_menu.ejs
@@ -9,6 +9,8 @@
       <li class="menu"><a href="./listorder">Order</a></li>
       <li class="menu"><a href="./listcustomer">Customer</a></li>
       <% } %>
+      <li class="menu"><a href="./listcomment">Comment</a></li>
+      <li class="menu"><a href="./listquestion">Question</a></li>
     </ul>
   </div>
   <div class="float-right">
