--- a/views/customer/_inform.ejs
+++ b/views/customer/_inform.ejs
@@ -1,13 +1,13 @@
 <div class="border-bottom">
   <div class="float-left">
     <%  if (session.customer) {  %>
-    Hello <a href="./myprofile" style="font-weight: bold;"><b><%=session.customer.name%></b></a> | <a style="font-weight: bold;" href="./logout">Logout</a> | <a href="./myorders" style="font-weight: bold;">My orders</a>
+    Hello <a href="../myprofile" style="font-weight: bold;"><b><%=session.customer.name%></b></a> | <a style="font-weight: bold;" href="../logout">Logout</a> | <a href="../myorders" style="font-weight: bold;">My orders</a>
     <%  } else {  %>
-    <a href="./login" style="font-weight: bold;">Login</a> | <a href="./signup" style="font-weight: bold;">Sign-up</a>
+    <a href="../login" style="font-weight: bold;">Login</a> | <a href="../signup" style="font-weight: bold;">Sign-up</a>
     <%  } %>
   </div>
   <div class="float-right" style="font-weight: bold;">
-    <a href="./mycart">My cart</a> have <b><%= (session.mycart) ? session.mycart.length : 0 %></b> items
+    <a href="../mycart">My cart</a> have <b><%= (session.mycart) ? session.mycart.length : 0 %></b> items
   </div>
   <div class="float-clear"></div>
 </div>
