--- a/views/customer/_menu.ejs
+++ b/views/customer/_menu.ejs
@@ -2,14 +2,14 @@
   <div class="border-bottom">
   <div class="float-left">
     <ul class="menu">
-      <li class="menu"><a href="./home" style="color: white; font-weight: bold;">LT-shop</a></li>
+      <li class="menu"><a href="../home" style="color: white; font-weight: bold;">LT-shop</a></li>
       <%  if (typeof(cats) !== 'undefined') { for (var cat of cats) { %>
-      <li class="menu"><a href="./listproduct?catID=<%=cat._id%>" style="color: white; font-weight: bold;"><%=cat.name%></a></li>
+      <li class="menu"><a href="../listproduct?catID=<%=cat._id%>" style="color: white; font-weight: bold;"><%=cat.name%></a></li>
       <%  } } %>
     </ul>
     </div>
   <div class="float-right">
-    <form action="./search" method="POST" class="search">
+    <form action="../search" method="POST" class="search">
       <input type="search" name="txtKeyword" placeholder="Enter keyword" class="keyword" required
         oninvalid="this.setCustomValidity('Keyword không để trống')"
         oninput="this.setCustomValidity('')" />
