--- a/views/admin/_menu.ejs
+++ b/views/admin/_menu.ejs
@@ -1,3 +1,4 @@
+<script src="https://use.fontawesome.com/9c740b58c7.js"></script>
 <%var per = session.admin.permission%>
 <div class="border-bottom">
   <div class="float-left">
