--- a/views/admin/listproduct.ejs
+++ b/views/admin/listproduct.ejs
@@ -108,9 +108,9 @@
         <tr>
           <td></td>
           <td>
-            <input type="submit" formaction="./addproduct" value="ADD NEW" />
-            <input type="submit" formaction="./updateproduct" value="UPDATE" id="btnUpdate" style="display: none" />
-            <input type="submit" formaction="./deleteproduct" value="DELETE" id="btnDelete" style="display: none" onclick="return confirm('ARE YOU SURE?')" />
+            <input type="submit" formaction="./addproduct" value="&#xf067;" class="fa fa-plus" />
+            <input type="submit" formaction="./updateproduct" value="&#xf040;" class="fa fa-pencil" id="btnUpdate" style="display: none" />
+            <input type="submit" formaction="./deleteproduct" value="&#xf1f8;" class="fa fa-trash" id="btnDelete" style="display: none" onclick="return confirm('ARE YOU SURE?')" />
           </td>
         </tr>
         <tr>
