--- a/views/customer/_menu.ejs
+++ b/views/customer/_menu.ejs
@@ -1,3 +1,4 @@
+<script src="https://use.fontawesome.com/9c740b58c7.js"></script>
 <div class="menu">
   <div class="border-bottom">
   <div class="float-left">
