--- a/views/master/_menu.ejs
+++ b/views/master/_menu.ejs
@@ -1,3 +1,4 @@
+<script src="https://use.fontawesome.com/9c740b58c7.js"></script>
 <div class="float-left">
     Hello <b><%=session.master.username%></b> | <a href="./logout">Logout</a>
   </div>
